--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -8,6 +8,10 @@ requirements = []
 path = "contracts/game-guard.clar"
 depends_on = []
 
+[contracts.game-guard-traits]
+path = "contracts/game-guard-traits.clar"
+depends_on = []
+
 [repl]
 costs_version = 2
 parser_version = 2
